asm/ingress-gateway/gateway-resource.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: central-gateway
  namespace: asm-ingress
spec:
  selector:
    asm: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
