asm/ingress-gateway/online-boutique-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress-asm
  namespace: online-boutique
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/central-gateway
  - asm-ingress/central-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 80
